src/snapshots/afrotd__parser__tests__interpreation_html_3.5.3_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.3.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-35. Es befinden sich 12 Team B Spielerin
            Position auf dem Feld und keiner dieser Spieler versucht das Feld
            zu verlassen, während der Ball spielbereit ist. Beide Teams sind in
            Formation und der Snap steht unmittelbar bevor. Die Play Clock ist
            schon fast abgelaufen und Quarterback A12 hat Probleme die Defense
            zu lesen und (a) verlangt ein Timeout oder (b) die Play Clock läuft
            aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wenn die zuständigen Schiedsrichter zwölf Team B Spieler
                zählen, beide Teams in Formation sind und kein Team B Spieler
                versucht, das Feld zu verlassen, (a) bietet die Crew Team A an,
                das Timeout zurückzunehmen und Team B wird für einen
                Auswechselfehler bestraft. Team A, 1. und 10 von der B-30. (b)
                Kein Foul für Spielverzögerung, Team B wird für einen
                Auswechselfehler bestraft. Team A, 1. und 10 von der B-30.
            </p>
        </details>
    </div>
</article>
