src/snapshots/afrotd__parser__tests__interpreation_html_4.1.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.1.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 15 von der A-30, Team A puntet. B44 befindet sich in
            Position zum Fangen des Kicks. Bei dem Versuch, den Kick zu fangen,
            mufft B44 den Kick an der B-35. Während der Ball nach der Berührung
            auf dem Boden rollt, pfeift der Backjudge irrtümlich ab. Der Ball
            wird unter einem Stapel liegender Spieler begraben. Während des
            Kicks hielt B22 einen Gegner fest und es liegt eine Flagge auf dem
            Spielfeld.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Irrtümliches Abpfeifen. Regel 4.1.2.b.3.c trifft nicht zu, da
                es keine klar sichtbare Recovery des Balls gab. Der Ball wird
                zum Previous Spot zurückgebracht und die 10-Meterstrafe für das
                illegale Halten wird durchgeführt. Team A bleibt in Ballbesitz,
                1. und 10 von der A-40.
            </p>
        </details>
    </div>
</article>
