src/snapshots/afrotd__parser__tests__interpreation_html_4.1.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.1.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der B-45. Ballträger A22 wird getackelt und fällt zu
            Boden, als er fumbelt. Ein Schiedsrichter pfeift irrtümlich ab.
            Spieler beider Teams versuchen den Ball zu recovern, und (a) B66
            recovert den Ball klar sichtbar, während er auf dem Boden liegt.
            (b) es ist nicht klar, wer den Ball recovert hat.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Regel 4.1.2.b.2.b wird angewandt. (a) Falls festgestellt wird,
                dass A22 die Kontrolle über den Ball verloren hat bevor der
                Spieler down war, dann gehört der Ball Team B am Punkt der
                Recovery durch B66. (b) Falls nicht sicher bestimmt werden
                kann, welches Team den Ball recovert hat, kann Team A wählen,
                den Down vom Previous Spot zu wiederholen oder den nächsten
                Down an der Stelle spielen, an der der Ball sich befand, als
                abgepfiffen wurde.
            </p>
        </details>
    </div>
</article>
