src/snapshots/afrotd__parser__tests__interpreation_html_4.1.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.1.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A befindet sich in einer Formation, um ein Fieldgoal zu
            erzielen. Beim Snap befindet sich A22 in einer Position, um einen
            Place Kick mit dem rechten Fuß durchzuführen, während sich A 33 in
            der Position des Holders befindet. Der Snap geht zu A33, der mit
            einem Knie den Boden berührt. Direkt nach dem Snap läuft A22 nach
            links in Richtung der neutralen Zone. A33, der sich mit dem Knie
            noch auf dem Boden befindet, wirft den Ball zu A22, der den Ball
            fängt und diesen über die Line-to-Gain advanct, bevor er getackelt
            wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel, weil A22 sich beim Snap in Position zum Kicken
                eines Place Kicks befand. 1. und 10 für Team A.
            </p>
        </details>
    </div>
</article>
