src/snapshots/afrotd__parser__tests__interpreation_html_4.1.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.1.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der B-40. Quarterback A12 nimmt den Snap und läuft
            auf die rechte Seite. Da er keinen freien Receiver finden kann,
            advanct er. Nachdem er die Line to Gain erreicht hat, macht er
            Anstalten, als würde er an der B-27 mit den Füßen voran rutschen.
            Er bleibt jedoch auf seinen Füßen und advanct zu einem Touchdown.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball wird an dem Punkt dead, als A12 vortäuscht, er würde
                mit den Füßen voran rutschen. Die Schiedsrichter müssen
                abpfeifen und den Ball für dead erklären. Team A hat einen
                First Down und 10 an der B-27.
            </p>
        </details>
    </div>
</article>
