src/snapshots/afrotd__parser__tests__interpreation_html_4.2.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.2.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A88 befindet sich in der Luft (kein Bodenkontakt) und erreicht den
            von A12 geworfenen Vorwärtspass. A88 hat den Ball sicher in seinen
            Händen. B28 befindet sich im Aus und berührt mit der Hand den Ball
            in A88’s Händen, während sich dieser noch in der Luft befindet. A88
            landet mit seinem rechten Fuß inbounds und hält den Ball weiterhin
            sicher unter Kontrolle, als er vollständig auf dem Boden landet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Vollständiger Vorwärtspass.
            </p>
        </details>
    </div>
</article>
