src/snapshots/afrotd__parser__tests__interpreation_html_5.1.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.1.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A88, der sich in der Luft befindet, erlangt einen Meter innerhalb
            der gegnerischen Endzone sichere Kontrolle über einen legalen
            Vorwärtspass. Als A88 den Ball sicher kontrolliert, wird er (a) von
            B21 berührt und A88 kommt zuerst auf seinen Knien an der B-1 mit
            dem Ball in seinen Händen auf dem Boden auf, wobei er die
            Ballkontrolle behält; (b) wird A88 von B21 berührt und kommt zuerst
            auf seinen Füßen an der B-1 auf dem Boden auf, wobei er die
            Ballkontrolle behält.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchdown in beiden Fällen (Regel 5.1.3.a Ausnahme 2, 8.2.1.b)
            </p>
        </details>
    </div>
</article>
