src/snapshots/afrotd__parser__tests__interpreation_html_5.1.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.1.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Receiver A88 läuft eine Route tief in B’s Endzone und kommt zurück
            in Richtung QB A12, der einen legalen Vorwärtspass auf A88 wirft.
            A88 springt im Laufen hoch und erreicht noch einen Meter innerhalb
            B’s Endzone den Ball, den er sicher kontrolliert. Als sich A88 in
            der Luft befindet, wird er von keinem Team B-Spieler berührt und
            behält sichere Kontrolle über den Ball als er an der B-1 landet (a)
            auf seinen Knien oder (b) auf seinen Füßen. Nachdem A88 seine
            Balance gefunden hat, läuft er mit dem Ball und wird an der B-5 zu
            Boden gebracht, wo der Ball für dead erklärt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Touchdown. (a) Team A’s Ball an der B-1, wo der Ball für
                dead erklärt wurde. (b) Team A’s Ball an der B-5, wo er für
                dead erklärt wurde.
            </p>
        </details>
    </div>
</article>
