src/snapshots/afrotd__parser__tests__interpreation_html_5.1.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.1.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            A4 hechtet mit dem Ball in seinem Besitz über die 50-Meterlinie,
            wobei der Ball die 50-Meterlinie durchbricht, die die Line to Gain
            für einen First Down ist. Er wird zur A-49 zurückgedrängt, wo ein
            Körperteil, außer Hand oder Fuß, den Boden berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                First Down am Punkt des Forward Progress (Regel 4.1.3.b).
            </p>
        </details>
    </div>
</article>
