src/snapshots/afrotd__parser__tests__interpreation_html_5.1.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.1.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            A5 hechtet mit dem Ball in seinem Besitz über die Goalline, wobei
            der Ball die Goalline durchbricht, und wird bis an die B-1
            zurückgedrängt, wo ein Körperteil von A5, außer dessen Hand oder
            Fuß, den Boden berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchdown. Der Ball wird dead, wenn er in A5’s Besitz die
                Fläche der Goalline durchbricht.
            </p>
        </details>
    </div>
</article>
